test/log/reduction/vrdotp_vv_i32_m.txt
vrdotp_vv_i32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vrdotp_vv_i32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vrdotp_vv_i32_m.c:30:6: warning: no previous prototype for 'vrdotp_vv_i32_m_golden' [-Wmissing-prototypes]
   30 | void vrdotp_vv_i32_m_golden(uint64_t *mask[2][16],int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vrdotp_vv_i32_m.c: In function 'vrdotp_vv_i32_m_golden':
vrdotp_vv_i32_m.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vrdotp_vv_i32_m.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vrdotp_vv_i32_m.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vrdotp_vv_i32_m.c: In function 'main':
vrdotp_vv_i32_m.c:37:16: warning: declaration of 'mask' shadows a parameter [-Wshadow]
   37 |     bool16x2_t mask;
      |                ^~~~
vrdotp_vv_i32_m.c:30:39: note: shadowed declaration is here
   30 | void vrdotp_vv_i32_m_golden(uint64_t *mask[2][16],int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                             ~~~~~~~~~~^~~~~~~~~~~
vrdotp_vv_i32_m.c:38:16: warning: declaration of 'a' shadows a parameter [-Wshadow]
   38 |     int32x16_t a;
      |                ^
vrdotp_vv_i32_m.c:30:60: note: shadowed declaration is here
   30 | void vrdotp_vv_i32_m_golden(uint64_t *mask[2][16],int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                                                   ~~~~~~~~~^
vrdotp_vv_i32_m.c:39:16: warning: declaration of 'b' shadows a parameter [-Wshadow]
   39 |     int32x16_t b;
      |                ^
vrdotp_vv_i32_m.c:30:71: note: shadowed declaration is here
   30 | void vrdotp_vv_i32_m_golden(uint64_t *mask[2][16],int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                                                              ~~~~~~~~~^
vrdotp_vv_i32_m.c:40:16: warning: declaration of 'c' shadows a parameter [-Wshadow]
   40 |     int32x16_t c;
      |                ^
vrdotp_vv_i32_m.c:30:82: note: shadowed declaration is here
   30 | void vrdotp_vv_i32_m_golden(uint64_t *mask[2][16],int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                                                                         ~~~~~~~~~^
vrdotp_vv_i32_m.c:47:13: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   47 |     int32_t exp_result[16] = {0};
      |             ^~~~~~~~~~
vrdotp_vv_i32_m.c:30:93: note: shadowed declaration is here
   30 | void vrdotp_vv_i32_m_golden(uint64_t *mask[2][16],int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                                                                                    ~~~~~~~~~^~~~~~~~~~
vrdotp_vv_i32_m.c:49:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   49 |     data_init_bool(mask, exp_mask, 16,2, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vrdotp_vv_i32_m.c:55:28: warning: passing argument 1 of 'vrdotp_vv_i32_m_golden' from incompatible pointer type [-Wincompatible-pointer-types]
   55 |     vrdotp_vv_i32_m_golden(exp_mask,exp_a,exp_b,exp_c,exp_result);
      |                            ^~~~~~~~
      |                            |
      |                            uint64_t * {aka long long unsigned int *}
vrdotp_vv_i32_m.c:30:39: note: expected 'uint64_t * (*)[16]' {aka 'long long unsigned int * (*)[16]'} but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   30 | void vrdotp_vv_i32_m_golden(uint64_t *mask[2][16],int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                             ~~~~~~~~~~^~~~~~~~~~~
vrdotp_vv_i32_m.c:63:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int32_t' {aka 'long int'} [-Wformat=]
   63 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int32_t {aka long int}
      |                                                               %lx
vrdotp_vv_i32_m.c: In function 'vrdotp_vv_i32_m_golden':
vrdotp_vv_i32_m.c:78:1: error: expected declaration or statement at end of input
   78 | }
      | ^
vrdotp_vv_i32_m.c:30:39: warning: unused parameter 'mask' [-Wunused-parameter]
   30 | void vrdotp_vv_i32_m_golden(uint64_t *mask[2][16],int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                             ~~~~~~~~~~^~~~~~~~~~~
vrdotp_vv_i32_m.c:30:60: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vrdotp_vv_i32_m_golden(uint64_t *mask[2][16],int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                                                   ~~~~~~~~~^
vrdotp_vv_i32_m.c:30:71: warning: unused parameter 'b' [-Wunused-parameter]
   30 | void vrdotp_vv_i32_m_golden(uint64_t *mask[2][16],int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                                                              ~~~~~~~~~^
vrdotp_vv_i32_m.c:30:82: warning: unused parameter 'c' [-Wunused-parameter]
   30 | void vrdotp_vv_i32_m_golden(uint64_t *mask[2][16],int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                                                                         ~~~~~~~~~^
vrdotp_vv_i32_m.c:30:93: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vrdotp_vv_i32_m_golden(uint64_t *mask[2][16],int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                                                                                    ~~~~~~~~~^~~~~~~~~~
At top level:
vrdotp_vv_i32_m.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrdotp_vv_i32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vrdotp_vv_i32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vrdotp_vv_i32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrdotp_vv_i32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed